# authentication-sdk

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  test.yml
authentication_sdk/: __init__.py
scripts/: lint.sh  test.sh  test_html.sh
tests/: test_version.py
